--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "tugas",
   "homepage": "https://Syahrezaimamw.github.io/tugass",
   "version": "0.1.0",
-  "private": true,
+  "private": false,
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
